feat: 支持跨设备访问与CORS配置优化
- 配置后端绑定0.0.0.0允许外部访问
- 放宽开发环境CORS和CSP限制
- SecurityConfig支持允许所有来源
- SecurityHeadersConfig支持动态CSP配置
- 更新dev环境配置文件

Co-Authored-By: Claude <noreply@anthropic.com>